<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_slice_permission_allow">Allow</string>
    <string name="abc_slice_permission_checkbox">Allow %1$s to show slices from any app</string>
    <string name="abc_slice_permission_deny">Deny</string>
    <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
    <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
    <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
    <string name="abc_slices_permission_request">%1$s wants to show %2$s slices</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abort_transaction_confirmation">Do you really wish to abort this transaction?</string>
    <string name="account_controller__account_lable">Account</string>
    <string name="account_controller__active_order_plural">Active Orders</string>
    <string name="account_controller__active_order_singular">Active Order</string>
    <string name="account_controller__favorites_lable">Favourites</string>
    <string name="account_controller__manage_address_lable">Manage Address</string>
    <string name="account_controller__my_account_lable">My Account</string>
    <string name="account_controller__offer_lable">Offers</string>
    <string name="account_controller__offers_lable">Offers</string>
    <string name="account_controller__past_order_plural">Past Orders</string>
    <string name="account_controller__past_order_singular">Past Order</string>
    <string name="account_controller__payment_lable">Payment</string>
    <string name="account_controller__referral_lable">Referrals</string>
    <string name="account_controller_login_lable">Login</string>
    <string name="account_controller_send_feedback_lable">Send Feedback</string>
    <string name="account_linked_successfully">Account linked successfully.</string>
    <string name="account_linking_failed">Account linking failed</string>
    <string name="account_my_super_days_left">%s days left</string>
    <string name="account_my_super_title">My SUPER</string>
    <string name="account_swiggy_pay_subtitle">Balance &amp; Transactions</string>
    <string name="account_swiggy_pay_title">Swiggy Money</string>
    <string name="action_button_go_to_home">GO TO HOME</string>
    <string name="action_button_retry">RETRY</string>
    <string name="action_hide">HIDE</string>
    <string name="action_resend">RESEND</string>
    <string name="action_show">SHOW</string>
    <string name="activity_profile_no_address_info_text">"You don't have any addresses saved. Saving address helps you checkout faster."</string>
    <string name="activity_profile_no_saved_addresses_text">"KNOCK, KNOCK! WHO'S THERE?"</string>
    <string name="activity_profile_saved_cards_text">Saved Cards</string>
    <string name="activity_title_add_address">Add Address</string>
    <string name="activity_title_review_cart">Review Order</string>
    <string name="ad_text">Ad</string>
    <string name="add">Add</string>
    <string name="add_address_change">CHANGE</string>
    <string name="add_address_skip_for_now_text">SKIP</string>
    <string name="add_address_title">Set delivery location</string>
    <string name="add_address_to_proceed">Add Address To Proceed</string>
    <string name="add_an_address">Add an address</string>
    <string name="add_item">Add Item</string>
    <string name="add_money">ADD MONEY</string>
    <string name="add_money_to_proceed">Add Rs. %.2f more to proceed</string>
    <string name="add_more_details">ADD MORE DETAILS</string>
    <string name="add_more_details_subtitle">for faster checkout</string>
    <string name="add_new_card_payment">Add New Card</string>
    <string name="add_new_vpa">Add Existing UPI Id</string>
    <string name="add_newcard">Add a New Card</string>
    <string name="add_picture">Add picture to describe item</string>
    <string name="add_pictures_from_google">Add picture(s) from Google</string>
    <string name="add_selected">Add Selected</string>
    <string name="additinal_details">Additional Details</string>
    <string name="additional_detail_added_button_text">View</string>
    <string name="additional_detail_added_text">Additional details added</string>
    <string name="address_confirm_dialog_change_text">CHANGE</string>
    <string name="address_controller__manage_address_title">Manage Addresses</string>
    <string name="address_delete_request_failed">@string/something_went_wrong_try_again</string>
    <string name="address_deleted_message">Address has been deleted successfully!</string>
    <string name="address_hint">LOCATION</string>
    <string name="address_locating_hint">Identifying Location…</string>
    <string name="address_save_failed">There was some issue while trying to save your address. Please try again</string>
    <string name="address_save_failed_title">Failed to save address</string>
    <string name="address_text">%1$s (%2$s)</string>
    <string name="all_conversations_thread">All conversation threads</string>
    <string name="all_item">Item details</string>
    <string name="almost_there">Almost There</string>
    <string name="already_have_home_address">You already have a Home address</string>
    <string name="already_have_work_address">You already have a Work address</string>
    <string name="amazon_pay_merchant_id">A1ARLXJTNUTBI</string>
    <string name="amazonpay">AmazonPay</string>
    <string name="analytics_object_name">Analytics Object Name</string>
    <string name="another_restaurant_has_cart_description">Your cart contains dishes from <b>%1$s</b>. Do you want to discard the selection and add dishes from <b>%2$s</b>"? "</string>
    <string name="another_restaurant_has_cart_title">Replace cart item?</string>
    <string name="app_id">1487664751476151</string>
    <string name="app_name">Swiggy</string>
    <string name="app_settings_in_app_update_available_title">App update available</string>
    <string name="app_version_code_label">App Version Code</string>
    <string name="app_version_name_label">App Version Name</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">apply</string>
    <string name="apply_coupon_logged_out_msg">For Applying Coupon you need to login</string>
    <string name="apply_this_coupon">APPLY THIS COUPON</string>
    <string name="area_hint">AREA</string>
    <string name="asset_statements">"[{
 \"relation\": [\"delegate_permission/common.handle_all_urls\"],
 \"target\": {
 \"namespace\": \"web\",
 \"site\": \"https://www.swiggy.com\",
 }
}]"</string>
    <string name="assiged">assigned</string>
    <string name="attachments">Attachments</string>
    <string name="auto_confirm_additional_text">We will auto-confirm the order in 02:00 mins</string>
    <string name="auto_save_card_text">We will securely save this card for a faster payment experience (CVV will not be saved). If required, you can remove this card from Account > Payments.</string>
    <string name="averaged_from_text">Averaged from</string>
    <string name="back_button_exit_message">Please hit BACK button again to exit</string>
    <string name="back_button_warning">"Please don't hit the back button until the action is complete."</string>
    <string name="beta_assets">false</string>
    <string name="bill_details">BILL DETAILS</string>
    <string name="blackzone_message">"We're not taking any new orders in this area. Please try a different location."</string>
    <string name="blackzone_title">Temporarily Unserviceable</string>
    <string name="bottom_bar_account_title">ACCOUNT</string>
    <string name="bottom_bar_cart_title">CART</string>
    <string name="bottom_bar_explore_title">SEARCH</string>
    <string name="bottom_bar_restaurant_title">SWIGGY</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_restaurants">Browse Restaurants</string>
    <string name="bs_more">More</string>
    <string name="build_version">8</string>
    <string name="bullet_points">●</string>
    <string name="buy">buy</string>
    <string name="current_balance">Current Balance</string>
    <string name="delink">YES, DELINK</string>
    <string name="enter_amount">ENTER AMOUNT</string>
    <string name="gtm_delete_address">manage-address-delete</string>
    <string name="gtm_edit_address">manage-address-edit</string>
    <string name="gtm_third_party_add_new_address">third_party_add_new_address</string>
    <string name="ok_got_it">OK, GOT IT</string>
    <string name="order_placed_animation_text_line1">Yay! Order Received.</string>
    <string name="order_placed_animation_text_line2">Thanks for placing the order. Keep Swiggying!</string>
    <string name="order_processing_message">"We're verifying your payment status."</string>
    <string name="order_processing_title">Hold On!</string>
    <string name="share_tooltip_subtitle">Now you can send a link to your friends and family members to track this order.</string>
    <string name="share_tooltip_title">Share your order status</string>
    <string name="third_party_add_new_address_action_text">ADD NEW ADDRESS</string>
    <string name="third_party_address_required_message">%1$s will deliver your order to this address</string>
    <string name="third_party_select_address_info_lable1">Saved addresses for %1$s</string>
    <string name="third_party_select_address_info_lable2">Swipe left/right to delete %1$s</string>
    <string name="track_give_five_star">Give us 5 stars on PlayStore</string>
    <string name="track_loved_the_app">Loved the App?</string>
    <string name="track_rate_app">RATE THE APP</string>
    <string name="updateButton">UPDATE NOW</string>
    <string name="updateHeader">Update Needed</string>
    <string name="updatedBodyText">It seems you are on an older version of Swiggy App. Please update for an enhanced online ordering experience.</string>
    <string name="updatedNoToday">Not Today</string>
    <string name="v2_address__delete_address_list_lable">Delete</string>
    <string name="v2_address__edit_address_list_lable">Edit</string>
</resources>