<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/share_tooltip_background" android:padding="@dimen/dimen_16dp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_tooltip_title" android:fontFamily="@font/proxima_nova_semibold" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextSemiBold14spBlackWhite100" />
    <TextView android:id="@id/subtitle" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8dp" android:text="@string/share_tooltip_subtitle" android:lineSpacingExtra="3.0sp" android:fontFamily="@font/proxima_nova_regular" android:layout_marginEnd="@dimen/dimen_8dp" app:layout_constraintEnd_toStartOf="@id/image" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/TextRegular13spWhite100" />
    <TextView android:id="@id/click_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_16dp" android:text="@string/ok_got_it" android:lineSpacingExtra="3.0sp" android:fontFamily="@font/proxima_nova_bold" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/subtitle" style="@style/TextBold13spWhite100" />
    <ImageView android:id="@id/image" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/share_tooltip_image" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintDimensionRatio="1:1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/title" />
</androidx.constraintlayout.widget.ConstraintLayout>