<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:tag="layout/address_list_item_0" android:background="@color/white" android:paddingLeft="@dimen/dimen_16dp" android:paddingTop="@dimen/dimen_24dp" android:paddingRight="@dimen/dimen_16dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/dimen_20dp" android:paddingEnd="@dimen/dimen_20dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <in.swiggy.android.commonsui.view.IconTextView android:textSize="@dimen/font_size_18sp" android:textColor="@color/blackGrape90" android:gravity="start|center" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_16dp" android:layout_weight="1.0" android:layout_marginStart="@dimen/dimen_16dp">
        <in.swiggy.android.view.SwiggyTextView android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Home" app:minWidthWhenLoading="@dimen/dimen_60dp" app:visibilityWhenLoading="visible" style="@style/TextSemiBold15spBlackGrape90" />
        <in.swiggy.android.view.SwiggyTextView android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_12dp" android:text="No.17, Flat No.103, 1st Main, 3rd Cross, C-19\nNo.17, Flat No.103, 1st Main" android:lineSpacingExtra="@dimen/line_spacing_3sp" app:lineCountWhenLoading="3" app:minWidthWhenLoading="@dimen/dimen_220dp" app:visibilityWhenLoading="visible" style="@style/TextRegular13spBlackGrape70" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <in.swiggy.android.view.SwiggyTextView android:tag="binding_4" android:paddingTop="@dimen/dimen_16dp" android:paddingBottom="@dimen/dimen_24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/v2_address__edit_address_list_lable" app:minWidthWhenLoading="@dimen/dimen_50dp" app:objectName="@string/gtm_edit_address" app:visibilityWhenLoading="visible" style="@style/TextBold14spOrange100Caps" />
            <in.swiggy.android.view.SwiggyTextView android:tag="binding_5" android:paddingTop="@dimen/dimen_16dp" android:paddingBottom="@dimen/dimen_24dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_24dp" android:text="@string/v2_address__delete_address_list_lable" android:layout_marginStart="@dimen/dimen_24dp" app:minWidthWhenLoading="@dimen/dimen_50dp" app:objectName="@string/gtm_delete_address" app:visibilityWhenLoading="visible" style="@style/TextBold14spOrange100Caps" />
        </LinearLayout>
        <View android:tag="binding_6" android:background="@color/blackGrape10" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
</LinearLayout>