<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/item_track_decorated_card_layout_0" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/image" android:tag="binding_1" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:scaleType="fitCenter" android:adjustViewBounds="true" android:contentDescription="@string/app_name" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" />
    <ImageView android:gravity="center" android:id="@id/icon" android:tag="binding_2" android:background="@drawable/super_icon" android:visibility="visible" android:layout_width="@dimen/dimen_30dp" android:layout_height="@dimen/dimen_30dp" android:layout_marginTop="@dimen/dimen_16dp" android:scaleType="fitCenter" android:contentDescription="@string/app_name" android:layout_marginStart="@dimen/dimen_16dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <in.swiggy.android.view.SwiggyTextView android:ellipsize="end" android:id="@id/title" android:tag="binding_3" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_24dp" android:text="@string/track_loved_the_app" android:layout_marginStart="@dimen/dimen_60dp" android:layout_marginEnd="@dimen/margin_16dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/TextExtraBold18spWhite100" />
    <in.swiggy.android.view.SwiggyTextView android:ellipsize="end" android:id="@id/subtitle" android:tag="binding_4" android:layout_width="@dimen/dimen_0dp" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_12dp" android:text="@string/track_give_five_star" android:lineSpacingExtra="@dimen/font_size_3sp" android:layout_marginEnd="@dimen/dimen_106dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toBottomOf="@id/title" style="@style/TextRegular12spWhite60" />
    <in.swiggy.android.view.SwiggyTextView android:ellipsize="end" android:gravity="center" android:id="@id/track_small_nudge_cta" android:tag="binding_5" android:background="@drawable/super_card_cta_gradient_drawable" android:layout_width="wrap_content" android:layout_height="@dimen/dimen_40dp" android:layout_marginTop="@dimen/dimen_16dp" android:layout_marginBottom="@dimen/dimen_24dp" android:text="@string/track_rate_app" android:maxLines="1" android:layout_weight="1.0" android:paddingStart="@dimen/dimen_12dp" android:paddingEnd="@dimen/dimen_12dp" android:layout_marginStart="@dimen/dimen_60dp" android:layout_marginEnd="@dimen/dimen_16dp" app:layout_constrainedWidth="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/subtitle" app:layout_constraintWidth_min="@dimen/dimen_136dp" style="@style/TextExtraBold14spWhite100" />
</androidx.constraintlayout.widget.ConstraintLayout>