<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/parent_layout" android:tag="layout/fragment_paytm_add_delink_account_0" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/translucentBlack20" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <in.swiggy.android.view.SwiggyTextView android:gravity="end" android:id="@id/currentBalanceTxt" android:paddingLeft="@dimen/margin_16dp" android:paddingTop="@dimen/margin_28dp" android:paddingRight="@dimen/margin_16dp" android:paddingBottom="@dimen/margin_16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_balance" android:paddingStart="@dimen/margin_16dp" android:paddingEnd="@dimen/margin_16dp" style="@style/TextMedium11spBlackGrape70Caps" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_56dp">
            <ImageView android:id="@id/walletLogo" android:background="@drawable/v2_ic_paytm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_16dp" android:contentDescription="@string/app_name" android:layout_marginStart="@dimen/margin_16dp" />
            <in.swiggy.android.view.SwiggyTextView android:gravity="end" android:id="@id/paytmCurrentBalance" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/margin_16dp" android:layout_marginRight="@dimen/margin_16dp" android:layout_weight="1.0" android:layout_marginStart="@dimen/margin_16dp" android:layout_marginEnd="@dimen/margin_16dp" style="@style/TextRegular13spBlackGrape70" />
        </LinearLayout>
        <View android:background="@color/transparent" android:layout_width="fill_parent" android:layout_height="@dimen/separator_height" />
        <LinearLayout android:orientation="vertical" android:id="@id/add_money_layout" android:background="@color/white" android:paddingLeft="@dimen/margin_16dp" android:paddingRight="@dimen/margin_16dp" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_32dp" app:hintTextAppearance="@style/HintStyle">
                <in.swiggy.android.view.SwiggyEditText android:theme="@style/OrderCommentEditTextTheme" android:id="@id/paytmRechargeValueEditText" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/enter_amount" android:inputType="numberDecimal" style="@style/EditTextMedium15spBlackGrape100BlackGrape60" />
            </com.google.android.material.textfield.TextInputLayout>
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/margin_32dp" android:layout_marginBottom="@dimen/margin_16dp">
                <in.swiggy.android.view.SwiggyTextView android:gravity="center" android:id="@id/paytmRechargeAddMoneyBtn" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_48dp" android:text="@string/add_money" style="@style/ButtonBold15spWhite100Orange100" />
                <com.pnikosis.materialishprogress.ProgressWheel android:layout_gravity="center" android:id="@id/add_money_loader" android:visibility="gone" android:layout_width="@dimen/dimen_20dp" android:layout_height="@dimen/dimen_20dp" app:matProg_barColor="@color/nasty_orange" app:matProg_barWidth="2.0dip" app:matProg_progressIndeterminate="true" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
    <in.swiggy.android.view.SwiggyTextView android:id="@id/delinkWalletButton" android:padding="@dimen/margin_16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/delink" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/TextSemiBold12spOrange100Caps" />
</RelativeLayout>